# app/Http/Controllers/ClientController.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Controllers;
 
+use App\Client;
 use Illuminate\Http\Request;
 
 class ClientController extends Controller
@@ -10,19 +11,27 @@ class ClientController extends Controller
 
       /**
      * @SWG\Get(
-     *   path="/api/clients/{mytest}",
+     *   path="/api/clients/{user}",
      *   summary="Get Users",
      *   operationId="testing",
      *   @SWG\Response(response=200, description="successful operation"),
+     *   @SWG\Response(response=403, description="forbidden"),
+     *   @SWG\Response(response=404, description="not found"),
      *   @SWG\Response(response=406, description="not acceptable"),
      *   @SWG\Response(response=500, description="internal server error"),
-     *   @SWG\Response(response=412, description="bbz"),
-     *   @SWG\Parameter(name="mytest", in="path", required=true, type="string"),
+     *   @SWG\Parameter(name="user", in="path", required=true, type="string"),
      * )
      */
+
+    public function index() {
+        return response()->json(['clients' => Client::orderBy('name')->get()]);
+    }
+
+    /*
 	public function index(Request $request){
 		return response()->json($this->cust_arr);
       }
+      */
 
    /**
     * @SWG\Post(
@@ -31,13 +40,17 @@ class ClientController extends Controller
      *      summary="Add User",
      *      @SWG\Parameter(name="name", in="formData", required=true, type="string"),
      *      @SWG\Parameter(name="surname", in="formData", required=true, type="string"),
-     *      @SWG\Parameter(name="yob", in="formData", required=true, type="integer"),
+     *      @SWG\Parameter(name="yearOfBirth", in="formData", required=true, type="integer"),
      *      @SWG\Response(response=200, description="Success"),
      *      @SWG\Response(response=204, description="Created"),
      * )
      */
-      public function store(Request $request){
-            $this->cust_arr[count($this->cust_arr)] = [$request["name"], $request["surname"], $request["yob"]];
-            return response()->json($this->cust_arr, 201);
-	}
+
+
+    public function store(Request $request) {
+        $client = new Client();
+        $client->fill($request->all());
+        $client->save();
+        return response()->json($client, 201);
+    }
 }
